--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -128,5 +128,5 @@ jobs:
       - name: Build and push backend Docker image
         run: |
           cd Desktop/tool_project/pmt-backend2
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-app:latest .
+          docker build --build-arg SKIP_TESTS=true -t ${{ secrets.DOCKER_USERNAME }}/backend-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/backend-app:latest
