--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -85,46 +85,13 @@ jobs:
           cd Desktop/tool_project/pmt-backend2
           ./mvnw test
 
-  dockerize-and-publish:
-    runs-on: ubuntu-latest  # Utilisation de l'environnement Ubuntu
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Installer Java 17 (si nécessaire pour le backend)
-      - name: Install Java 17
-        run: |
-          sudo apt update
-          sudo apt install openjdk-17-jdk -y
-          java -version  # Vérifier l'installation de Java
-
-      # Définir JAVA_HOME et mettre à jour le PATH
-      - name: Set JAVA_HOME and update PATH
-        run: |
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
-          java -version  # Vérification pour s'assurer que Java 17 est bien utilisé
-
-      # Vérification de la version de Maven (si besoin pour le backend)
-      - name: Check Maven version
-        run: mvn -v
-
-      # Étape 1 : Se connecter à Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Nom d'utilisateur Docker Hub
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Jeton d'accès Docker Hub
-
-      # Étape 2 : Dockerisation et push de l'image Docker pour le frontend
+      # Étape 6 : Dockerisation et push des images Docker
       - name: Build and push frontend Docker image
         run: |
           cd Desktop/tool_project/pmt-frontend
           docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/frontend-app:latest
 
-      # Étape 3 : Dockerisation et push de l'image Docker pour le backend
       - name: Build and push backend Docker image
         run: |
           cd Desktop/tool_project/pmt-backend2
